# docker-gtest

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  setup-gtest.sh
test/: CMakeLists.txt  run_test.sh
test/include/docker_gtest/: app.h  mock_app.h
test/src/: CMakeLists.txt  app.cc  main.cc
test/test/: CMakeLists.txt  test.cc
